--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ fedora:
                 xorg-x11-server-Xvfb
         - mkdir -p pfx/
         - meson --prefix=${PWD}/pfx
-                -Dwerror=true
+                -Dwerror=false
                 -Dglib:werror=false
                 -Dgtk:broadway-backend=false
                 -Dgtk:build-examples=false
