janitorial: fix various project links
Fixes #656

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -16,11 +16,13 @@
     <p>GNOME Text Editor is a simple text editor focused on a pleasing default experience.</p>
 	</description>
 
-  <url type="homepage">https://gitlab.gnome.org/GNOME/gnome-text-editor</url>
+  <url type="homepage">https://apps.gnome.org/TextEditor/</url>
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/gnome-text-editor/issues</url>
   <url type="donation">https://www.gnome.org/donate/</url>
   <url type="translate">https://wiki.gnome.org/TranslationProject</url>
   <url type="vcs-browser">https://gitlab.gnome.org/GNOME/gnome-text-editor</url>
+  <url type="contribute">https://welcome.gnome.org/en/app/TextEditor/</url>
+  <url type="translate">https://l10n.gnome.org/module/gnome-text-editor/</url>
 
   <screenshots>
     <screenshot type="default">
