appdata: fix contribute link to remove language tag

--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -21,7 +21,7 @@
   <url type="donation">https://www.gnome.org/donate/</url>
   <url type="translate">https://wiki.gnome.org/TranslationProject</url>
   <url type="vcs-browser">https://gitlab.gnome.org/GNOME/gnome-text-editor</url>
-  <url type="contribute">https://welcome.gnome.org/en/app/TextEditor/</url>
+  <url type="contribute">https://welcome.gnome.org/app/TextEditor/</url>
   <url type="translate">https://l10n.gnome.org/module/gnome-text-editor/</url>
 
   <screenshots>
