--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -36,8 +36,7 @@
   <translation type="gettext">gnome-text-editor</translation>
 
   <releases>
-    <release version="46~beta" date="2024-02-12"/>
-    <release version="46~alpha" date="2024-01-08"/>
+    <release version="46.0" date="2024-03-15"/>
   </releases>
 
   <kudos>
