--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -1,7 +1,9 @@
 [Desktop Entry]
 Categories=GNOME;GTK;Utility;TextEditor;
 Keywords=write;notepad;
-DBusActivatable=true
+# Not activatable because we want to force ourself through the startup
+# options processing for session-state/etc. See #661.
+DBusActivatable=false
 Exec=gnome-text-editor %U
 MimeType=text/plain;application/x-zerosize;
 Name=Text Editor
