ui: Add a placeholder text to Find entry
Add a placeholder text to the 'Find' entry to prevent it from appearing empty.

Also, update the POTFILES to make the 'editor-search-entry.ui' file translatable.

Fixes: #666

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -26,6 +26,7 @@ src/editor-properties-dialog.ui
 src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
 src/editor-search-entry.c
+src/editor-search-entry.ui
 src/editor-sidebar-item.c
 src/editor-sidebar-row.ui
 src/editor-spell-menu.c
