--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -35,6 +35,7 @@
   <translation type="gettext">gnome-text-editor</translation>
 
   <releases>
+    <release version="46.3" date="2024-05-09"/>
     <release version="46.2" date="2024-05-09"/>
     <release version="46.1" date="2024-04-10"/>
     <release version="46.0" date="2024-03-15"/>
