.gitlab-ci.yml: fix -Dgtk:build-demos

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ fedora:
                 -Dgtk:broadway-backend=false
                 -Dgtk:build-examples=false
                 -Dgtk:build-tests=false
-                -Dgtk:demos=false
+                -Dgtk:build-demos=false
                 -Dgtk:media-gstreamer=disabled
                 -Dgtk:werror=false
                 -Dgtksourceview:documentation=false
