build: add libxkbcommon-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,7 @@ fedora:
                 libicu-devel
                 libjpeg-turbo-devel
                 libpng-devel
+                libxkbcommon-devel
                 meson
                 meson
                 ninja-build
