build: add libXrandr-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,7 @@ fedora:
                 libjpeg-turbo-devel
                 libpng-devel
                 libxkbcommon-devel
+                libXrandr-devel
                 meson
                 meson
                 ninja-build
