build: add libXi-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,7 @@ fedora:
                 libpng-devel
                 libxkbcommon-devel
                 libXrandr-devel
+                libXi-devel
                 meson
                 meson
                 ninja-build
