build: add libXcursor-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ fedora:
                 libxkbcommon-devel
                 libXrandr-devel
                 libXi-devel
+                libXcursor-devel
                 meson
                 meson
                 ninja-build
