build: add libXdamage-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ fedora:
                 libXrandr-devel
                 libXi-devel
                 libXcursor-devel
-                meson
+                libXdamage-devel
                 meson
                 ninja-build
                 redhat-rpm-config
