build: add libXinerama-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,7 @@ fedora:
                 libXi-devel
                 libXcursor-devel
                 libXdamage-devel
+                libXinerama-devel
                 meson
                 ninja-build
                 redhat-rpm-config
