build: add glslc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,7 @@ fedora:
                 libXcursor-devel
                 libXdamage-devel
                 libXinerama-devel
+                glslc
                 meson
                 ninja-build
                 redhat-rpm-config
