build: add libdrm-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,7 @@ fedora:
                 libXcursor-devel
                 libXdamage-devel
                 libXinerama-devel
+                libdrm-devel
                 glslc
                 meson
                 ninja-build
