build: add libglvnd-devel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ fedora:
                 libXdamage-devel
                 libXinerama-devel
                 libdrm-devel
+                libglvnd-devel
                 glslc
                 meson
                 ninja-build
