build: disable gtk testsuite

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,6 +79,7 @@ fedora:
                 -Dgtk:broadway-backend=false
                 -Dgtk:build-examples=false
                 -Dgtk:build-tests=false
+                -Dgtk:build-testsuite=false
                 -Dgtk:build-demos=false
                 -Dgtk:media-gstreamer=disabled
                 -Dgtk:werror=false
