build: allow disabling editorconfig

--- a/src/editorconfig/meson.build
+++ b/src/editorconfig/meson.build
@@ -1,6 +1,10 @@
+libeditorconfig_dep = dependency('editorconfig')
+
 editor_deps += [libeditorconfig_dep]
 
 editor_sources += files([
   'editorconfig-glib.c',
   'editor-page-editorconfig.c',
 ])
+
+config_h.set10('HAVE_EDITORCONFIG', true)
