build: fix Win32 CI
- Fix dependencies installation
- Set Og optimization instead of default O0 to reduce binaries size
  and avoid a linker issue on gtk side

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,17 +120,17 @@ fedora:
             - './*.zip'
         when: always
 
-#msys2-mingw64:
-#    extends: .msys2-common
-#    variables:
-#      MSYSTEM: "MINGW64"
-#      CHERE_INVOKING: "yes"
-#
-#msys2-ucrt64:
-#    extends: .msys2-common
-#    variables:
-#      MSYSTEM: "UCRT64"
-#      CHERE_INVOKING: "yes"
+msys2-mingw64:
+    extends: .msys2-common
+    variables:
+      MSYSTEM: "MINGW64"
+      CHERE_INVOKING: "yes"
+
+msys2-ucrt64:
+    extends: .msys2-common
+    variables:
+      MSYSTEM: "UCRT64"
+      CHERE_INVOKING: "yes"
 
 #macos:
 #    extends: .only-default
