--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -35,7 +35,7 @@
   <translation type="gettext">gnome-text-editor</translation>
 
   <releases>
-    <release version="46.0" date="2024-03-15"/>
+    <release version="47.beta" date="2024-08-04"/>
   </releases>
 
   <kudos>
