--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,11 +122,11 @@ fedora:
             - './*.zip'
         when: always
 
-msys2-mingw64:
-    extends: .msys2-common
-    variables:
-      MSYSTEM: "MINGW64"
-      CHERE_INVOKING: "yes"
+#msys2-mingw64:
+#    extends: .msys2-common
+#    variables:
+#      MSYSTEM: "MINGW64"
+#      CHERE_INVOKING: "yes"
 
 msys2-ucrt64:
     extends: .msys2-common
