.gitlab-ci.yml: disable libspelling introspection

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,6 +96,7 @@ fedora:
                 -Dlibadwaita:werror=false
                 -Dlibsass:werror=false
                 -Dlibspelling:docs=false
+                -Dlibspelling:introspection=disabled
                 -Dlibspelling:vapi=false
                 -Dpango:gtk_doc=false
                 -Dpango:introspection=disabled
