build: fix win32.rc build in case the build dir is not a subdir
The icon support was added in !143 but the logic assumed that the
meson build dir is a subdirectory of the source dir, since the
win32.rc gets written to the build dir, but includes the .ico file
relative from the source dir.

In case this is not the case the build fails with something like:
windres.EXE: can't open icon file '../build-aux/win32/org.gnome.TextEditor.ico': No such file or directory

Fix by writing the absolute path to the .ico into the .rc file
at configure time.

--- a/src/meson.build
+++ b/src/meson.build
@@ -84,6 +84,7 @@ if host_machine.system() == 'windows'
   rc_data = configuration_data()
   rc_data.set('GTE_MAJOR_VERSION', meson.project_version().split('.')[0].to_int())
   rc_data.set('GTE_VERSION', meson.project_version())
+  rc_data.set('GTE_ICON', meson.project_source_root() / 'build-aux/win32/org.gnome.TextEditor.ico')
 
   win32rc = configure_file(input: 'win32.rc.in',
     output: 'win32.rc',
