--- a/src/win32.rc.in
+++ b/src/win32.rc.in
@@ -1,7 +1,7 @@
 #define WIN32_LEAN_AND_MEAN
 #include <windows.h>
 
-GTE_ICON ICON "../build-aux/win32/org.gnome.TextEditor.ico"
+GTE_ICON ICON "@GTE_ICON@"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION @GTE_MAJOR_VERSION@,0,0,0
