--- a/meson.build
+++ b/meson.build
@@ -32,7 +32,7 @@ endif
 # Check dependencies
 glib_req_version = '2.80'
 gtk_req_version = '4.15'
-adwaita_req_version = '1.6.alpha'
+adwaita_req_version = '1.6.0'
 gtksourceview_req_version = '5.10.0'
 spelling_req_version = '0.3.0'
 
