--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-data/org.gnome.TextEditor.appdata.xml.in.in
+data/org.gnome.TextEditor.metainfo.xml.in.in
 data/org.gnome.TextEditor.desktop.in.in
 data/org.gnome.TextEditor.gschema.xml
 data/styles/builder.xml
