--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -45,6 +45,7 @@
   </requires>
 
   <releases>
+    <release version="47.1" date="2024-10-18"/>
     <release version="47.0" date="2024-09-13"/>
   </releases>
 
