--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,10 +1,11 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-data/org.gnome.TextEditor.metainfo.xml.in.in
 data/org.gnome.TextEditor.desktop.in.in
+data/org.gnome.TextEditor.metainfo.xml.in.in
 data/org.gnome.TextEditor.gschema.xml
-data/styles/builder.xml
-data/styles/printing.xml
+src/styles/builder-dark.xml
+src/styles/builder.xml
+src/styles/printing.xml
 src/editor-animation.c
 src/editor-application-actions.c
 src/editor-application.c
