view: override extend_selection for source view
In GtkSourceView, it must handle invisible sequences correctly. That can
have drastic performance issues on minified files which we sometimes see
in Text Editor.

Until something more concrete can be handled upstream in GTK and/or
GtkSourceView, mitigate the issue by assuming all text is visible as is
the case in Text Editor.

Fixes: #742

--- a/src/meson.build
+++ b/src/meson.build
@@ -35,6 +35,7 @@ editor_sources = [
   'editor-sidebar-item.c',
   'editor-sidebar-model.c',
   'editor-sidebar-row.c',
+  'editor-source-iter.c',
   'editor-source-map.c',
   'editor-source-view.c',
   'editor-statusbar.c',
