window: add EditorFullscreenBox
Same thing we did for Ptyxis, based on Epiphany's EphyFullscreenBox.

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ editor_sources = [
   'editor-file-manager.c',
   'editor-focus-chain.c',
   'editor-frame-source.c',
+  'editor-fullscreen-box.c',
   'editor-joined-menu.c',
   'editor-language-dialog.c',
   'editor-language-row.c',
