--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -18,6 +18,7 @@ src/editor-language-row.c
 src/editor-open-popover.ui
 src/editor-page.c
 src/editor-page.ui
+src/editor-path.c
 src/editor-position-label.ui
 src/editor-preferences-dialog.ui
 src/editor-preferences-font.c
