statistics: add EditorDocumentStatistics
This is a helper object that can update statistics asynchronously. The
goal here is to use it from the new properties panel.

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ editor_sources = [
   'editor-application-actions.c',
   'editor-buffer-monitor.c',
   'editor-document.c',
+  'editor-document-statistics.c',
   'editor-info-bar.c',
   'editor-file-manager.c',
   'editor-focus-chain.c',
