encoding: add encoding and GListModel of encodings types
These will be used by various dialogs/panels to get the items as a model
and objects rather than the opaque GSV type.

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,6 +5,7 @@ editor_sources = [
   'editor-buffer-monitor.c',
   'editor-document.c',
   'editor-document-statistics.c',
+  'editor-encoding-model.c',
   'editor-info-bar.c',
   'editor-file-manager.c',
   'editor-focus-chain.c',
