indent: add EditorIndentModel
This is a tiny model just to make binding things easier to widgetry.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,6 +11,7 @@ src/editor-application-actions.c
 src/editor-application.c
 src/editor-document.c
 src/editor-file-manager.c
+src/editor-indent-model.c
 src/editor-info-bar.c
 src/editor-info-bar.ui
 src/editor-language-dialog.ui
