encoding-dialog: add dialog for selecting encoding
This can be used by the infobar to select an encoding based on error type.

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,7 +5,9 @@ editor_sources = [
   'editor-buffer-monitor.c',
   'editor-document.c',
   'editor-document-statistics.c',
+  'editor-encoding-dialog.c',
   'editor-encoding-model.c',
+  'editor-encoding-row.c',
   'editor-indent-model.c',
   'editor-info-bar.c',
   'editor-file-manager.c',
