properties: add new properties panel
This replaces the view menu with a panel that provides the same
functionality and is a bit easier to use.

Fixes: #752

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -25,6 +25,8 @@ src/editor-position-label.ui
 src/editor-preferences-dialog.ui
 src/editor-preferences-font.c
 src/editor-print-operation.c
+src/editor-properties-panel.c
+src/editor-properties-panel.ui
 src/editor-save-changes-dialog.c
 src/editor-search-bar.ui
 src/editor-search-entry.c
