--- a/data/org.gnome.TextEditor.metainfo.xml.in.in
+++ b/data/org.gnome.TextEditor.metainfo.xml.in.in
@@ -51,6 +51,6 @@
   </supports>
 
   <releases>
-    <release version="47.0" date="2024-09-13"/>
+    <release version="48.alpha" date="2025-01-23"/>
   </releases>
 </component>
