--- a/data/org.gnome.TextEditor.appdata.xml.in.in
+++ b/data/org.gnome.TextEditor.appdata.xml.in.in
@@ -45,6 +45,7 @@
   </requires>
 
   <releases>
+    <release version="47.3" date="2025-01-28"/>
     <release version="47.2" date="2024-11-22"/>
     <release version="47.1" date="2024-10-18"/>
     <release version="47.0" date="2024-09-13"/>
