--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,10 +10,12 @@ src/editor-animation.c
 src/editor-application-actions.c
 src/editor-application.c
 src/editor-document.c
+src/editor-encoding-dialog.ui
 src/editor-file-manager.c
 src/editor-indent-model.c
 src/editor-info-bar.c
 src/editor-info-bar.ui
+src/editor-language-dialog.c
 src/editor-language-dialog.ui
 src/editor-language-row.c
 src/editor-newline-model.c
@@ -25,6 +27,7 @@ src/editor-position-label.ui
 src/editor-preferences-dialog.ui
 src/editor-preferences-font.c
 src/editor-print-operation.c
+src/editor-properties.c
 src/editor-properties-panel.c
 src/editor-properties-panel.ui
 src/editor-save-changes-dialog.c
