--- a/data/org.gnome.TextEditor.metainfo.xml.in.in
+++ b/data/org.gnome.TextEditor.metainfo.xml.in.in
@@ -51,6 +51,7 @@
   </supports>
 
   <releases>
+    <release version="48.2" date="2025-03-24"/>
     <release version="48.1" date="2025-03-17"/>
     <release version="48.0" date="2025-03-15"/>
   </releases>
