editor-application-actions: Activate the application if no window present
This fixes the problem that the session is not restored when the
application is launched with the "new-window" action.
Also, only save the session if it's already restored.

Fixes #661

--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -1,9 +1,7 @@
 [Desktop Entry]
 Categories=GNOME;GTK;Utility;TextEditor;
 Keywords=write;notepad;
-# Not activatable because we want to force ourself through the startup
-# options processing for session-state/etc. See #661.
-DBusActivatable=false
+DBusActivatable=true
 Exec=gnome-text-editor %U
 MimeType=text/plain;application/x-zerosize;
 Name=Text Editor
