meson: Bump to libadwaita 1.8.alpha

--- a/meson.build
+++ b/meson.build
@@ -32,7 +32,7 @@ endif
 # Check dependencies
 glib_req_version = '2.80'
 gtk_req_version = '4.17.3'
-adwaita_req_version = '1.6.0'
+adwaita_req_version = '1.8.alpha'
 gtksourceview_req_version = '5.15.0'
 spelling_req_version = '0.4.0'
 
