help-overlay: Rename to shortcuts-dialog
This will make easier to review the next commit.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -41,4 +41,4 @@ src/editor-utils.c
 src/editor-window-actions.c
 src/editor-window.c
 src/editor-window.ui
-src/help-overlay.ui
+src/shortcuts-dialog.ui
