--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,11 +132,11 @@ fedora:
 #      MSYSTEM: "MINGW64"
 #      CHERE_INVOKING: "yes"
 
-msys2-ucrt64:
-    extends: .msys2-common
-    variables:
-      MSYSTEM: "UCRT64"
-      CHERE_INVOKING: "yes"
+#msys2-ucrt64:
+#    extends: .msys2-common
+#    variables:
+#      MSYSTEM: "UCRT64"
+#      CHERE_INVOKING: "yes"
 
 #macos:
 #    extends: .only-default
