build: align gtk version with libadwaita
This fixes the win32 build failure by fetching a correct gtk version with meson-wrap,
so re-enable the msys2 build in CI.

Also, properly set the Windows subsystem to avoid spawning a console at startup.
This has no impact on other platforms.

--- a/src/meson.build
+++ b/src/meson.build
@@ -119,5 +119,6 @@ editor = executable('gnome-text-editor', editor_sources + editor_enums + [build_
                         include_directories('editorconfig')],
                c_args: editor_c_args,
          dependencies: editor_deps,
+        win_subsystem: 'windows',
               install: true,
 )
