--- a/data/org.gnome.TextEditor.metainfo.xml.in.in
+++ b/data/org.gnome.TextEditor.metainfo.xml.in.in
@@ -51,6 +51,6 @@
   </supports>
 
   <releases>
-    <release version="49.rc" date="2025-08-30"/>
+    <release version="49.0" date="2025-09-12"/>
   </releases>
 </component>
