Add extra .desktop keyword
I suggest the addition of "notes" in the .desktop keywords, to catch an extra keyword for quick launch of the Text Editor.

--- a/data/org.gnome.TextEditor.desktop.in.in
+++ b/data/org.gnome.TextEditor.desktop.in.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Categories=GNOME;GTK;Utility;TextEditor;
-Keywords=write;notepad;
+Keywords=write;notepad;notes;
 DBusActivatable=true
 Exec=gnome-text-editor %U
 MimeType=text/plain;application/x-zerosize;
