--- a/data/org.gnome.TextEditor.metainfo.xml.in.in
+++ b/data/org.gnome.TextEditor.metainfo.xml.in.in
@@ -51,6 +51,7 @@
   </supports>
 
   <releases>
+    <release version="49.1" date="2026-01-14"/>
     <release version="49.0" date="2025-09-12"/>
   </releases>
 </component>
