--- a/data/org.gnome.TextEditor.metainfo.xml.in.in
+++ b/data/org.gnome.TextEditor.metainfo.xml.in.in
@@ -24,9 +24,11 @@
   <screenshots>
     <screenshot type="default">
       <image>https://static.gnome.org/appdata/gnome-43/text-editor/text-editor-1.png</image>
+      <caption>Text Editor's main window</caption>
     </screenshot>
     <screenshot>
       <image>https://static.gnome.org/appdata/gnome-43/text-editor/text-editor-2.png</image>
+      <caption>Syntax highlighting</caption>
     </screenshot>
   </screenshots>
 
