--- a/data/org.gnome.TextEditor.metainfo.xml.in.in
+++ b/data/org.gnome.TextEditor.metainfo.xml.in.in
@@ -53,6 +53,7 @@
   </supports>
 
   <releases>
+    <release version="50.beta" date="2025-01-29"/>
     <release version="49.0" date="2025-09-12"/>
   </releases>
 </component>
